--- a/seecciones/Horario.html
+++ b/seecciones/Horario.html
@@ -150,7 +150,7 @@
         </div>
         <div class="tables-container">
             <div class="schedule-view">
-                <div id="showNotification"> </div>
+                <div class="notification" id="showNotification"> </div>
                 <h2>Visualizar Horario</h2>
                 <input type="text" id="searchInputSchedule" class="search-bar" placeholder="Buscar por empleado..." oninput="filterSchedules()">
                 <table class="schedule-table">
